%%{init: {'theme':'base','themeVariables':{'fontFamily':'Arial','primaryColor':'#F7F3F2','primaryTextColor':'#171717','primaryBorderColor':'#B4232F','lineColor':'#5B6068','secondaryColor':'#F3F4F6','tertiaryColor':'#FFFFFF','clusterBkg':'#FFFFFF','clusterBorder':'#D1D5DB','actorBkg':'#FFFFFF','actorBorder':'#B4232F','actorTextColor':'#171717','signalColor':'#404040','signalTextColor':'#171717','noteBkgColor':'#FFF7ED','noteBorderColor':'#C2410C','noteTextColor':'#171717'}}}%%
erDiagram
    organizations ||--o{ users : contains
    organizations ||--o{ api_keys : issues
    organizations ||--o{ invites : sends
    organizations ||--o{ teams : groups
    teams ||--o{ team_members : contains
    users ||--o{ team_members : joins
    users ||--o| user_notification_prefs : configures
    teams ||--o{ oncall_schedules : schedules
    users ||--o{ oncall_schedules : covers
    organizations {
      uuid id PK
      string slug
      string plan
      string subscription_status
    }
    users {
      uuid id PK
      uuid org_id FK
      string email
      string role
      bool is_active
    }
    api_keys {
      uuid id PK
      uuid org_id FK
      string name
      string key_hash
    }
    invites {
      uuid id PK
      uuid org_id FK
      string role
      datetime expires_at
    }
    teams {
      uuid id PK
      uuid org_id FK
      string name
      string color
    }
    team_members {
      uuid id PK
      uuid team_id FK
      uuid user_id FK
      string role
    }
    user_notification_prefs {
      uuid id PK
      uuid user_id FK
      bool daily_digest
      int digest_hour
    }
    oncall_schedules {
      uuid id PK
      uuid team_id FK
      uuid user_id FK
      datetime starts_at
      datetime ends_at
    }
    staff_users {
      uuid id PK
      string email
      bool is_active
    }
